[project]
name = "iber-matcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "sentence-transformers>=5.2.0",
    "typer>=0.20.1",
    "typing-extensions>=4.15.0",
]
[dependency-groups]
dev = [
    "black",
    "autoflake",
    "isort",
    "flake8",
    "mypy",
]